--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ section {
   text-align: center;
 }
 .heading span {
-  color: rgb(115, 3, 167);
+  color: #006677;
 }
 header .logo {
   font-size: 1.9rem;
@@ -96,7 +96,7 @@ header .logo i {
   font-size: 2.2rem;
 }
 header .logo:hover {
-  color: #fc8c05;
+  color: #09A9C5;
 }
 header .navbar ul {
   list-style: none;
@@ -117,8 +117,8 @@ header .navbar ul li a {
 }
 header .navbar ul li a.active,
 header .navbar ul li a:hover {
-  color: #011aff;
-  border-bottom: 0.2rem solid #011aff;
+  color: #00879E;
+  border-bottom: 0.2rem solid #00879E;
   padding: 0.5rem 0;
 }
 /* navbar ends */
@@ -224,12 +224,12 @@ header .navbar ul li a:hover {
 .home .content h2 {
   font-size: 5rem;
   font-weight: 800;
-  color: #002057;
+  color: #00679A;
 }
 .home .content h2 span {
   font-size: 5rem;
   font-weight: 800;
-  color: #ff7b00;
+  color: #007083;
 }
 .home .content p {
   font-size: 2.5rem;
@@ -239,7 +239,7 @@ header .navbar ul li a:hover {
 }
 .home .content p span {
   font-size: 2.5rem;
-  color: rgb(148, 8, 8);
+  color: #00879E;
   font-weight: 600;
   padding: 1rem 0;
 }
@@ -251,8 +251,8 @@ header .navbar ul li a:hover {
   border-radius: 4em;
   transition: 0.5s;
   color: #fff;
-  background: #2506ad;
-  box-shadow: 0px 5px 18px rgba(48, 68, 247, 0.6);
+  background: #00879E;
+  box-shadow: 0px 5px 18px rgb(0 135 158 / 38%);
   font-family: "Nunito", sans-serif;
 }
 .home .btn span {
@@ -266,7 +266,7 @@ header .navbar ul li a:hover {
   transition: 0.3s;
 }
 .home .btn:hover {
-  background: #1a047e;
+  background: #005C98;
 }
 .home .btn:hover i {
   transform: translateX(5px);
@@ -289,8 +289,8 @@ header .navbar ul li a:hover {
   font-size: 2rem;
   display: inline-block;
   line-height: 44px;
-  color: #00d9ff;
-  background-color: #09011b;
+  color: aliceblue;
+  background-color: #007083;
   width: 44px;
   height: 44px;
   text-align: center;
@@ -319,7 +319,7 @@ header .navbar ul li a:hover {
   background-color: #070707;
 }
 .social-icons a.instagram:hover {
-  background-color: #ee00da;
+  background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
 }
 /* social icons end */
 
@@ -404,7 +404,7 @@ header .navbar ul li a:hover {
   text-transform: none;
 }
 .about .row .content .box-container .box p span {
-  color: #011aff;
+  color: #00879E;
 }
 .resumebtn {
   margin-top: 6rem;
@@ -414,8 +414,8 @@ header .navbar ul li a:hover {
   border-radius: 0.5em;
   transition: 0.3s;
   color: #fff;
-  background: #2506ad;
-  box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
+  background: #00879E;
+  box-shadow: 0px 5px 10px #00879e94;
   font-family: "Nunito", sans-serif;
 }
 .resumebtn .btn span {
@@ -429,7 +429,7 @@ header .navbar ul li a:hover {
   transition: 0.3s;
 }
 .resumebtn .btn:hover {
-  background: #1a047e;
+  background: #005D6C;
 }
 .resumebtn .btn:hover i {
   transform: translateX(5px);
@@ -461,13 +461,13 @@ header .navbar ul li a:hover {
 /* skills section starts */
 .skills {
   min-height: 90vh;
-  background: linear-gradient(to bottom, #57059e, #4a00e0);
+  background: linear-gradient(190deg, rgba(0,38,115,1) 0%, rgba(0,135,158,0.9920343137254902) 98%);
 }
 .skills h2 {
   color: #fff;
 }
 .skills .heading span {
-  color: rgb(255, 230, 0);
+  color: #05bcdb;
 }
 .skills .container {
   background: rgba(0, 0, 22, 0.4);
@@ -555,6 +555,7 @@ header .navbar ul li a:hover {
   display: flex;
   flex-direction: row;
   width: 80%;
+  height: 200px;
   border-radius: 0.5rem;
   box-shadow: 0.2rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
   text-align: center;
@@ -601,7 +602,7 @@ header .navbar ul li a:hover {
 }
 .education h4 {
   font-size: 2rem;
-  color: rgb(34, 109, 0);
+  color: #00679A;
   text-align: left;
   margin: 1rem;
   font-family: "Nunito", sans-serif;
@@ -649,7 +650,7 @@ header .navbar ul li a:hover {
   padding: 1rem;
 }
 .work .heading span {
-  color: rgb(255, 230, 0);
+  color: #05bcdb;
 }
 .work .box-container {
   display: flex;
@@ -688,7 +689,7 @@ header .navbar ul li a:hover {
   height: 4.5rem;
   width: 100%;
   padding-left: 1rem;
-  background: #ffd900;
+  background: #09A9C5;
 }
 .work .box-container .box .content .tag h3 {
   font-size: 2rem;
@@ -722,7 +723,7 @@ header .navbar ul li a:hover {
   margin-right: 2rem;
 }
 .work .desc .btns .btn:hover {
-  background: #310ae0f5;
+  background: #005C98;
 }
 .work .viewall {
   display: flex;
@@ -737,7 +738,7 @@ header .navbar ul li a:hover {
   color: rgb(255, 255, 255);
   font-weight: 700;
   border: 2px solid #fff;
-  box-shadow: 0px 5px 10px rgba(65, 84, 241, 0.4);
+  box-shadow: 0px 5px 10px #0081977a;
   text-align: center;
 }
 .work .viewall .btn span {
@@ -1002,11 +1003,11 @@ form .message textarea {
 .field input:focus,
 .message textarea:focus {
   padding-left: 47px;
-  border: 2px solid rgb(115, 3, 167);
+  border: 2px solid #00879E;
 }
 .field input:focus ~ i,
 .message textarea:focus ~ i {
-  color: rgb(115, 3, 167);
+  color: #00879E;
 }
 form .message {
   position: relative;
@@ -1041,13 +1042,13 @@ form .button-area {
   cursor: pointer;
   border-radius: 5px;
   padding: 13px 25px;
-  background: #2506ad;
-  box-shadow: 0px 5px 10px rgba(48, 68, 247, 0.6);
+  background: #005C98;
+  box-shadow: 0px 5px 10px #005b9899;
   transition: 0.3s ease;
   font-family: "Nunito", sans-serif;
 }
 .button-area button:hover {
-  background: #421cecf5;
+  background: #09A9C5;
 }
 .button-area span {
   font-size: 17px;
@@ -1116,7 +1117,7 @@ form .button-area {
 }
 .footer .box-container .box p i {
   padding-right: 1rem;
-  color: #ffae00;
+  color: #09A9C5;
 }
 .footer .box-container .box a {
   font-size: 1.5rem;
@@ -1125,7 +1126,7 @@ form .button-area {
   display: block;
 }
 .footer .box-container .box a:hover {
-  color: #ffae00;
+  color: #09A9C5;
 }
 .footer .box-container .box .share {
   display: flex;
@@ -1149,7 +1150,7 @@ form .button-area {
   background: transparent;
   transform: scale(0.98);
   border: 0.1rem solid rgb(180, 178, 178);
-  color: #ffae00;
+  color: #09A9C5;
 }
 .footer .credit {
   padding: 1rem 0 0 0;
@@ -1161,7 +1162,7 @@ form .button-area {
   border-top: 0.1rem solid #fff3;
 }
 .footer .credit a {
-  color: #ffae00;
+  color: #09a9c5;
 }
 .footer .fa {
   color: #e90606;
@@ -1213,7 +1214,7 @@ form .button-area {
   right: 2rem;
   padding: 1rem 1.5rem;
   font-size: 2rem;
-  background: #ffae00;
+  background: #09A9C5;
   color: rgb(13, 0, 44);
   border-radius: 50%;
   transition: 1s linear;
